--- a/templates/index_new_v2.html
+++ b/templates/index_new_v2.html
@@ -7,8 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <!-- Link Swiper's CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-  <!-- Bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -177,7 +175,7 @@
     position: relative;
     padding: 20px 0px 50px 20px;
     border: 1px solid #888;
-    width: 80vw;
+    width: 80vw;;
     max-width: 90%;
     height: 80vh;
     aspect-ratio: 9/16;
@@ -561,10 +559,123 @@
 }
 
 
+
+/* navigation css */
+
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    overflow-x: hidden;
+}
+
+nav {
+    background-color: #333;
+    padding: 10px 20px;
+    text-align: center;
+    position: relative;
+}
+
+nav .logo {
+    color: white;
+    float: left;
+}
+
+nav label.toggle-button {
+    display: none;
+    font-size: 26px;
+    line-height: 50px;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+}
+
+.toggle {
+    display: none; /* Hide checkbox */
+}
+
+nav .menu {
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+nav .menu a {
+    color: white;
+    text-decoration: none;
+    padding: 15px 20px;
+    display: block;
+}
+
+nav .menu a:hover {
+    background-color: #555;
+}
+
+@media (max-width: 600px) {
+    nav label.toggle-button {
+        display: block;
+    }
+
+    nav .menu {
+        position: fixed;
+        top: 0;
+        right: 0;
+        height: 100%;
+        width: 300px; /* Adjusted width */
+        background-color: #333;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in-out;
+        z-index: 1000; /* Ensure it's above other content */
+    }
+
+    nav input[type="checkbox"]:checked + .menu {
+        transform: translateX(0);
+    }
+
+    nav .menu a {
+        text-align: center;
+        padding: 10px;
+        width: 100%;
+    }
+
+    .logo {
+        position: fixed;
+        left: 10px;
+        top: 10px;
+    }
+}
+
+
+
   </style>
 </head>
 
 <body>
+    <nav>
+        <!-- <div class="logo">Team News Analyzer</div> -->
+        <label for="toggle" class="toggle-button">&#9776;</label>
+        <input type="checkbox" id="toggle" class="toggle"/>
+        <div class="menu">
+            <a href="{{ url_for('index') }}">Home</a>
+            {% for cat in categories %}
+                <a href="{{ url_for('index_category', category=cat) }}">{{cat}}</a>
+            {% endfor %}
+            <!-- <a href="#">Category 1</a>
+            <a href="#">Category 2</a>
+            <a href="#">Category 3</a>
+            <a href="#">Category 4</a>
+            <a href="#">Category 5</a>
+            <a href="#">Category 6</a>
+            <a href="#">Category 7</a>
+            <a href="#">Category 8</a> -->
+        </div>
+    </nav>
+
   <!-- Swiper -->
   <!-- Swiper -->
   <div class="swiper mySwiper">
@@ -584,9 +695,6 @@
                         </p>
                         <p class="summary" style="display:none;">{{item['summary']}}</p>
                         <p class="publish_date" style="display:none;">{{item['pubDate']}}</p>
-                        <!-- <div id='chart' class='chart'” style="display:none;"></div>
-                        <div id='chart2' class='chart2'” style="display:none;"></div> -->
-                        <p class="article_id" style="display:none;">{{item.article_id}}</p>
                     </div>
                 </div>
             {% endfor %}
@@ -615,7 +723,7 @@
             <!-- Article Views and Publish Date -->
             <div class="article-info">
                 <p id="modalPublishDate">17 July 2023</p>
-                <!-- <p id="modalViews">Some views</p> -->
+                <!-- <p id="modalViews">5k views</p> -->
             </div>
 
             <!-- Key Highlights -->
@@ -647,10 +755,10 @@
                 <button class="poll-button agree" title="Agree"><i class="fas fa-check"></i>Agree</button>
                 <button class="poll-button disagree" title="Disagree"><i class="fas fa-times"></i>Disagree</button>
                 <button class="poll-button unsure" title="Unsure"><i class="fas fa-question"></i>Unsure</button>
-            </div>
+            </div> -->
             
 
-            <div class="related-articles">
+            <!-- <div class="related-articles">
                 <h3>Related Articles:</h3>
                 <ul>
                     <li><a href="article2.html">Exploring the Future of Quantum Computing</a></li>
@@ -668,15 +776,17 @@
                     <li><a href="article7.html">The Risks and Challenges of Quantum Technology</a></li>
                 </ul>
             </div> -->
+
+            <!-- Charts -->
             <br/>
             <br/>
             <div class="flex-container">
                 <div class="flex-child">
-                    <h4>Linguistic composition: original vs summary</h4>
+                    <h3>Linguistic composition: original vs summary</h3>
                     <div id='modalchart' class='modalchart'”></div>
                 </div>
                 <div class="flex-child">
-                    <h4>Word count distribution: original vs summary</h4>
+                    <h3>Word count distribution: original vs summary</h3>
                     <div id='modalchart2' class='modalchart2'”></div>
                 </div>
             </div>
@@ -697,7 +807,6 @@
                 <i class="fas fa-thumbs-down"></i>
             </button>
         </div> -->
-        
 
 
     </div>
@@ -712,9 +821,6 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
   <!-- Initialize Swiper -->
-
-  <!--Bootstrap-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   
 <script>
 
@@ -751,15 +857,14 @@ function showModal(targetElement) {
     // var views = targetElement.querySelector('.views').innerText;
     var summary = targetElement.querySelector('.summary').innerText;
     var imgSrc = targetElement.querySelector('img').src;
+    // var src_url = targetElement.querySelector('img').src;
     var pub_date = targetElement.querySelector('.publish_date').innerText;
     var single_article_url = targetElement.querySelector('.article_url').href;
-    var article_id = targetElement.querySelector('.article_id').innerText;
     var graph1;
     var graph2;
     var val_set = false;
-    // console.log(typeof(single_article_url))
-    
-    fetch(single_article_url.replace("article/", ""))
+
+    fetch(single_article_url.replace("article", "article_chart"))
     .then(response => response.json())
     .then(data => {
         if (!val_set){
@@ -771,19 +876,11 @@ function showModal(targetElement) {
         }
         
     })
- 
 
     document.getElementById('modalTitle').innerText = title;
     // document.getElementById('modalViews').innerText = views;
     document.getElementById('modalSummary').innerText = summary;
     document.getElementById('modalPublishDate').innerText = pub_date;
-
-    // document.getElementById('modalchart').append(graph1);
-    // document.getElementById('modalchart2').append(graph2);
-    
-    // Plotly.plot('modalchart',graph1,{});
-    // Plotly.plot('modalchart2',graph2,{});
-
 
     modalContent.style.backgroundImage = 'url(' + imgSrc + ')';
 
@@ -807,14 +904,6 @@ window.onclick = function(event) {
 
 </script>
 <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
-<!-- <script type='text/javascript'>
-    {% for item in news_objects %}
-        var graphs = {{item.linguistic_figure | safe}};
-        var graphs2 = {{item.word_dist_figure | safe}};
-        Plotly.plot('chart',graphs,{});
-        Plotly.plot('chart2',graphs2,{});
-    {% endfor %}
-</script> -->
 
 
 </body>
